Atualização de conexão e criação de novos controllers

--- a/AssessmentSystem.MVC/AssessmentSystem.MVC.csproj
+++ b/AssessmentSystem.MVC/AssessmentSystem.MVC.csproj
@@ -149,9 +149,11 @@
     </Compile>
     <Compile Include="Controllers\AssessmentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProfessorsController.cs" />
     <Compile Include="Controllers\QuestionOptionsController.cs" />
     <Compile Include="Controllers\QuestionsController.cs" />
     <Compile Include="Controllers\StudentAssessmentPerformancesController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -258,6 +260,16 @@
     <Content Include="Views\StudentAssessmentPerformances\Details.cshtml" />
     <Content Include="Views\StudentAssessmentPerformances\Edit.cshtml" />
     <Content Include="Views\StudentAssessmentPerformances\Index.cshtml" />
+    <Content Include="Views\Students\Create.cshtml" />
+    <Content Include="Views\Students\Delete.cshtml" />
+    <Content Include="Views\Students\Details.cshtml" />
+    <Content Include="Views\Students\Edit.cshtml" />
+    <Content Include="Views\Students\Index.cshtml" />
+    <Content Include="Views\Professors\Create.cshtml" />
+    <Content Include="Views\Professors\Delete.cshtml" />
+    <Content Include="Views\Professors\Details.cshtml" />
+    <Content Include="Views\Professors\Edit.cshtml" />
+    <Content Include="Views\Professors\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
