Implementação de autorização na API; configuração de Swagger na inicialização da API e Criação de model PersonLogin.

--- a/AssessmentSystem.MVC/AssessmentSystem.MVC.csproj
+++ b/AssessmentSystem.MVC/AssessmentSystem.MVC.csproj
@@ -160,6 +160,9 @@
     <Compile Include="Person.cs">
       <DependentUpon>AssessmentSystemModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="PersonLogin.cs">
+      <DependentUpon>AssessmentSystemModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Professor.cs">
       <DependentUpon>AssessmentSystemModel.tt</DependentUpon>
     </Compile>
