--- a/AssessmentSystem.API/packages.config
+++ b/AssessmentSystem.API/packages.config
@@ -4,6 +4,8 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
@@ -22,15 +24,31 @@
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.Azure.Search.Common" version="10.1.0" targetFramework="net48" />
   <package id="Microsoft.Azure.Search.Data" version="10.1.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Jwt" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.2.0" targetFramework="net48" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net48" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net48" />
   <package id="Microsoft.Spatial" version="7.5.3" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net48" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
