Configuração do angular e criação de modelo para busca em controller.

--- a/AssessmentSystem.MVC/AssessmentSystem.MVC.csproj
+++ b/AssessmentSystem.MVC/AssessmentSystem.MVC.csproj
@@ -53,6 +53,10 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="RestSharp, Version=107.3.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Bin\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -188,6 +192,7 @@
     <Compile Include="StudentAssessmentPerformance.cs">
       <DependentUpon>AssessmentSystemModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utils\LoginManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AssessmentSystemModel.Context.tt">
@@ -209,6 +214,12 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Models\Model Ulife to devs.sql" />
+    <Content Include="Scripts\angular-mocks.js" />
+    <Content Include="Scripts\angular-route.js" />
+    <Content Include="Scripts\angular-route.min.js" />
+    <Content Include="Scripts\angular.js" />
+    <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\Angular\Assessment.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="AssessmentSystemModel.edmx">
@@ -218,6 +229,8 @@
     <Content Include="AssessmentSystemModel.edmx.diagram">
       <DependentUpon>AssessmentSystemModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Scripts\angular.min.js.map" />
+    <Content Include="Scripts\angular-route.min.js.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -276,7 +289,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
